chore: restructure package to improve organization